@@ -5,6 +5,7 @@ import org.gradle.api.Action
 import org.gradle.api.Project
 import org.gradle.api.Task
 import org.gradle.api.tasks.JavaExec
+import org.grails.gradle.plugin.core.GrailsExtension
 
 /**
  * Sets up the reloading agent based on the agent configuration after the project has been configured
@@ -31,8 +32,30 @@ class AgentTasksEnhancer implements Action<Project> {
     }
 
     private void addAgent(Project project, JavaExec exec, File agent) {
-        exec.jvmArgs "-javaagent:$agent.absolutePath"
-        exec.jvmArgs "-Xverify:none"
-        exec.jvmArgs "-Dspringloaded=inclusions=grails.plugins..*"
+
+        GrailsExtension.Agent agentConfig = project.extensions.findByType(GrailsExtension)?.agent ?: new GrailsExtension.Agent()
+
+        exec.jvmArgs "-javaagent:${agentConfig.path?.absolutePath ?: agent.absolutePath}"
+
+        for(arg in agentConfig.jvmArgs) {
+            exec.jvmArgs arg
+        }
+        for(entry in agentConfig.systemProperties) {
+            exec.systemProperty(entry.key, entry.value)
+        }
+
+        Map<String, String> agentArgs= [
+                inclusions: agentConfig.inclusions,
+                synchronize: String.valueOf( agentConfig.synchronize ),
+                allowSplitPackages: String.valueOf( agentConfig.allowSplitPackages ),
+                cacheDir: agentConfig.cacheDir ? project.mkdir(agentConfig.cacheDir) : project.mkdir("build/springloaded")
+        ]
+        if(agentConfig.logging != null) {
+            agentArgs.put("logging", String.valueOf(agentConfig.logging))
+        }
+        if(agentConfig.exclusions) {
+            agentArgs.put('exclusions', agentConfig.exclusions)
+        }
+        exec.systemProperty('springloaded', agentArgs.collect { entry -> "$entry.key=$entry.value"}.join(';'))
     }
 }
